# backend-vizhome

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SETUP_KEYS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: CONTRIBUTING_CI.md  release-please-config.json
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  dependency-review.yml  ossar.yml  pr-checks.yml  pre-release.yml  release.yml
backend/: db.sqlite3  requirements.txt
backend/backend/: ml_engine.py  settings.py  urls.py  views.py
benchmarks/: README.md  __init__.py  conftest.py  locustfile.py  test_perf.py
bruno/: README.md  bruno.json  collection.bru  openapi.yml
bruno/01-Health/: Liveness.bru  Readiness.bru
bruno/02-Auth/: 2FA Verify Login.bru  Forgot Password.bru  Login.bru  Logout.bru  OAuth Exchange.bru  Refresh Token.bru  Register.bru  Reset Password.bru
bruno/03-Me/: 2FA Disable.bru  2FA Setup.bru  2FA Verify Setup.bru  Change Password.bru  Delete Session.bru  Get Me.bru  Get Preferences.bru  List Sessions.bru  Update Me.bru  Update Preferences.bru
bruno/04-Projects/: Create Project.bru  Delete Project.bru  (+6 more)
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONNEMENT.md  IDOR_AUDIT.md  INSTALLATEUR.md  MAINTENANCE.md  MARKETING.md  STRUCTURE.md  UTILISATEUR.md
scripts/: backup_minio.sh  backup_postgres.sh
src/: manage.py  requirements-dev.txt  requirements.txt
traefik/: traefik.yml
(+252 files in other folders)
