[project]
name = "backend-vizhome"
version = "0.1.0"
description = "VizHome backend API — Django + DRF"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["migrations", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # ligne trop longue (géré par formatter)
    "B008",  # appels de fonction dans les defaults (DRF/Django)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "I", "UP"]
"**/settings/*.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["venv", ".venv", "migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict-markers --cov=apps --cov-report=term-missing"
testpaths = ["src/apps"]
pythonpath = ["src"]
